--- a/views/join.pug
+++ b/views/join.pug
@@ -8,7 +8,7 @@ block content
     form.join-form-container__content(action="/user/join", method="POST")
       .content
         .content__guide-block
-          img.guide-block__img(src="/public/images/sally.PNG", alt="sally")
+          img.guide-block__img(src="../public/images/sally.PNG", alt="sally")
           p.guide-block__txt 회원정보를 입력해 주세요.
         .content__input
           input.input__item(type="text", placeholder="아이디", name="id", required)
